--- a/DocHub.Backend/DocHub.API/appsettings.json
+++ b/DocHub.Backend/DocHub.API/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=DocHubDB;Trusted_Connection=true;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=BLACKBOX;Database=DocHubDB;Trusted_Connection=true;MultipleActiveResultSets=true;TrustServerCertificate=true;Encrypt=true"
   },
   "Jwt": {
     "SecretKey": "YourSuperSecretKeyThatIsAtLeast32CharactersLong!",
@@ -30,5 +30,10 @@
         }
       }
     ]
+  },
+  "EPPlus": {
+    "ExcelPackage": {
+      "LicenseContext": "NonCommercial"
+    }
   }
 }
