--- a/DocHub.Backend/DocHub.API/DocHub.API.csproj
+++ b/DocHub.Backend/DocHub.API/DocHub.API.csproj
@@ -30,6 +30,7 @@
     <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.2.0" />
     <PackageReference Include="System.Drawing.Common" Version="8.0.0" />
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+    <PackageReference Include="DotNetEnv" Version="3.0.0" />
   </ItemGroup>
 
   <ItemGroup>
