--- a/DocHub.Backend/DocHub.API/appsettings.json
+++ b/DocHub.Backend/DocHub.API/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=BLACKBOX;Database=DocHubDB;Trusted_Connection=true;MultipleActiveResultSets=true;TrustServerCertificate=true;Encrypt=true"
+    "DefaultConnection": "Server=${DB_SERVER};Database=${DB_NAME};User Id=${DB_USER};Password=${DB_PASSWORD};MultipleActiveResultSets=true;TrustServerCertificate=true;Encrypt=true"
   },
   "Jwt": {
     "SecretKey": "YourSuperSecretKeyThatIsAtLeast32CharactersLong!",
